[gd_scene load_steps=2 format=3 uid="uid://bbqkx52cvdkgc"]

[ext_resource type="Script" path="res://UI/Menues/inventory_stuff/item_slot_two.gd" id="1_p3tp1"]

[node name="ItemSlotTwo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_p3tp1")
selected_collor = Color(1, 1, 1, 1)
unselected_collor = Color(0.344076, 0.344076, 0.344076, 1)

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.219
anchor_top = -0.317
anchor_right = 0.5
offset_left = -252.288
offset_top = 205.416
offset_right = -536.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.450648, 0.450648, 0.450648, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
expand_mode = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/PanelContainer2"]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer" to="." method="_on_margin_container_focus_entered"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer" to="." method="_on_margin_container_focus_exited"]
